updated virtual auth tests with allure